[tool.poetry]
name = "flightclubdarts-extract"
version = "1.0.0"
description = "Used to extract data from Flight Club Darts stories"
authors = ["thesammy2010 <43960199+thesammy2010@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
mypy = "^0.971"
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
